# youtube-analysis-tool

./: .env.example  .gitignore  README.md  pyproject.toml
codex-skills/youtube-analysis/: SKILL.md
codex-skills/youtube-analysis/agents/: openai.yaml
docs/: architecture.md
scripts/: youtube_analyze.py
src/youtube_analysis_tool/: __init__.py  artifacts.py  batch.py  constants.py  gpt.py  library.py  pipeline.py  reporting.py  review.py  routing.py  triage.py  visuals.py
tests/: test_batch_library.py  test_e2e.py  test_pipeline.py  test_stages.py
